[project]
name = "components_yaml_checks_dsl"
requires-python = ">=3.9,<3.13"
version = "0.1.0"
dependencies = [
    "dagster",
    "dagster-pipes",
    "dagster-shared",
    "dagster-test[components]",
]

[project.entry-points]
"dagster_dg.library" = { components_yaml_checks_dsl = "components_yaml_checks_dsl.lib"}

[dependency-groups]
dev = [
    "dagster-webserver",
    "dagster-graphql",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.dg]
directory_type = "project"

[tool.dg.project]
root_module = "components_yaml_checks_dsl"
python_environment = "persistent_uv"

[tool.setuptools.packages.find]
exclude=["components_yaml_checks_dsl_tests"]

[tool.uv.sources]
dagster-test = { path = '/Users/schrockn/code/dagster/python_modules/dagster-test', editable = true }
dagster-graphql = { path = '/Users/schrockn/code/dagster/python_modules/dagster-graphql', editable = true }
dagster = { path = '/Users/schrockn/code/dagster/python_modules/dagster', editable = true }
dagster-pipes = { path = '/Users/schrockn/code/dagster/python_modules/dagster-pipes', editable = true }
dagster-webserver = { path = '/Users/schrockn/code/dagster/python_modules/dagster-webserver', editable = true }
dagster-airbyte = { path = '/Users/schrockn/code/dagster/python_modules/libraries/dagster-airbyte', editable = true }
dagster-dg = { path = '/Users/schrockn/code/dagster/python_modules/libraries/dagster-dg', editable = true }
dagster-dask = { path = '/Users/schrockn/code/dagster/python_modules/libraries/dagster-dask', editable = true }
dagster-github = { path = '/Users/schrockn/code/dagster/python_modules/libraries/dagster-github', editable = true }
dagster-snowflake = { path = '/Users/schrockn/code/dagster/python_modules/libraries/dagster-snowflake', editable = true }
dagster-pagerduty = { path = '/Users/schrockn/code/dagster/python_modules/libraries/dagster-pagerduty', editable = true }
dagster-prometheus = { path = '/Users/schrockn/code/dagster/python_modules/libraries/dagster-prometheus', editable = true }
dagster-deltalake = { path = '/Users/schrockn/code/dagster/python_modules/libraries/dagster-deltalake', editable = true }
dagster-dlt = { path = '/Users/schrockn/code/dagster/python_modules/libraries/dagster-dlt', editable = true }
dagster-azure = { path = '/Users/schrockn/code/dagster/python_modules/libraries/dagster-azure', editable = true }
dagster-postgres = { path = '/Users/schrockn/code/dagster/python_modules/libraries/dagster-postgres', editable = true }
dagster-duckdb = { path = '/Users/schrockn/code/dagster/python_modules/libraries/dagster-duckdb', editable = true }
dagster-gcp-pandas = { path = '/Users/schrockn/code/dagster/python_modules/libraries/dagster-gcp-pandas', editable = true }
dagster-k8s = { path = '/Users/schrockn/code/dagster/python_modules/libraries/dagster-k8s', editable = true }
dagster-papertrail = { path = '/Users/schrockn/code/dagster/python_modules/libraries/dagster-papertrail', editable = true }
dagster-gcp-pyspark = { path = '/Users/schrockn/code/dagster/python_modules/libraries/dagster-gcp-pyspark', editable = true }
dagster-celery = { path = '/Users/schrockn/code/dagster/python_modules/libraries/dagster-celery', editable = true }
dagster-airflow = { path = '/Users/schrockn/code/dagster/python_modules/libraries/dagster-airflow', editable = true }
dagster-dbt = { path = '/Users/schrockn/code/dagster/python_modules/libraries/dagster-dbt', editable = true }
dagster-census = { path = '/Users/schrockn/code/dagster/python_modules/libraries/dagster-census', editable = true }
dagster-airlift = { path = '/Users/schrockn/code/dagster/python_modules/libraries/dagster-airlift', editable = true }
dagster-managed-elements = { path = '/Users/schrockn/code/dagster/python_modules/libraries/dagster-managed-elements', editable = true }
dagster-snowflake-pandas = { path = '/Users/schrockn/code/dagster/python_modules/libraries/dagster-snowflake-pandas', editable = true }
dagster-embedded-elt = { path = '/Users/schrockn/code/dagster/python_modules/libraries/dagster-embedded-elt', editable = true }
dagster-polars = { path = '/Users/schrockn/code/dagster/python_modules/libraries/dagster-polars', editable = true }
dagster-powerbi = { path = '/Users/schrockn/code/dagster/python_modules/libraries/dagster-powerbi', editable = true }
dagster-components = { path = '/Users/schrockn/code/dagster/python_modules/libraries/dagster-components', editable = true }
dagster-pandera = { path = '/Users/schrockn/code/dagster/python_modules/libraries/dagster-pandera', editable = true }
dagster-datadog = { path = '/Users/schrockn/code/dagster/python_modules/libraries/dagster-datadog', editable = true }
dagster-celery-k8s = { path = '/Users/schrockn/code/dagster/python_modules/libraries/dagster-celery-k8s', editable = true }
dagster-pandas = { path = '/Users/schrockn/code/dagster/python_modules/libraries/dagster-pandas', editable = true }
dagster-openai = { path = '/Users/schrockn/code/dagster/python_modules/libraries/dagster-openai', editable = true }
dagster-twilio = { path = '/Users/schrockn/code/dagster/python_modules/libraries/dagster-twilio', editable = true }
dagster-gcp = { path = '/Users/schrockn/code/dagster/python_modules/libraries/dagster-gcp', editable = true }
dagstermill = { path = '/Users/schrockn/code/dagster/python_modules/libraries/dagstermill', editable = true }
dagster-duckdb-pandas = { path = '/Users/schrockn/code/dagster/python_modules/libraries/dagster-duckdb-pandas', editable = true }
dagster-ge = { path = '/Users/schrockn/code/dagster/python_modules/libraries/dagster-ge', editable = true }
dagster-sigma = { path = '/Users/schrockn/code/dagster/python_modules/libraries/dagster-sigma', editable = true }
dagster-pyspark = { path = '/Users/schrockn/code/dagster/python_modules/libraries/dagster-pyspark', editable = true }
dagster-ssh = { path = '/Users/schrockn/code/dagster/python_modules/libraries/dagster-ssh', editable = true }
dagster-deltalake-polars = { path = '/Users/schrockn/code/dagster/python_modules/libraries/dagster-deltalake-polars', editable = true }
dagster-mysql = { path = '/Users/schrockn/code/dagster/python_modules/libraries/dagster-mysql', editable = true }
dagster-docker = { path = '/Users/schrockn/code/dagster/python_modules/libraries/dagster-docker', editable = true }
dagster-duckdb-pyspark = { path = '/Users/schrockn/code/dagster/python_modules/libraries/dagster-duckdb-pyspark', editable = true }
dagster-looker = { path = '/Users/schrockn/code/dagster/python_modules/libraries/dagster-looker', editable = true }
dagster-duckdb-polars = { path = '/Users/schrockn/code/dagster/python_modules/libraries/dagster-duckdb-polars', editable = true }
dagster-msteams = { path = '/Users/schrockn/code/dagster/python_modules/libraries/dagster-msteams', editable = true }
dagster-datahub = { path = '/Users/schrockn/code/dagster/python_modules/libraries/dagster-datahub', editable = true }
dagster-databricks = { path = '/Users/schrockn/code/dagster/python_modules/libraries/dagster-databricks', editable = true }
dagster-deltalake-pandas = { path = '/Users/schrockn/code/dagster/python_modules/libraries/dagster-deltalake-pandas', editable = true }
dagster-fivetran = { path = '/Users/schrockn/code/dagster/python_modules/libraries/dagster-fivetran', editable = true }
dagster-sling = { path = '/Users/schrockn/code/dagster/python_modules/libraries/dagster-sling', editable = true }
dagster-slack = { path = '/Users/schrockn/code/dagster/python_modules/libraries/dagster-slack', editable = true }
dagster-aws = { path = '/Users/schrockn/code/dagster/python_modules/libraries/dagster-aws', editable = true }
dagster-mlflow = { path = '/Users/schrockn/code/dagster/python_modules/libraries/dagster-mlflow', editable = true }
dagster-tableau = { path = '/Users/schrockn/code/dagster/python_modules/libraries/dagster-tableau', editable = true }
dagster-shared = { path = '/Users/schrockn/code/dagster/python_modules/libraries/dagster-shared', editable = true }
dagster-snowflake-pyspark = { path = '/Users/schrockn/code/dagster/python_modules/libraries/dagster-snowflake-pyspark', editable = true }
dagster-celery-docker = { path = '/Users/schrockn/code/dagster/python_modules/libraries/dagster-celery-docker', editable = true }
dagster-spark = { path = '/Users/schrockn/code/dagster/python_modules/libraries/dagster-spark', editable = true }
dagster-wandb = { path = '/Users/schrockn/code/dagster/python_modules/libraries/dagster-wandb', editable = true }
