[project]
name = "data-quality-patterns"
version = "0.1.0"
description = "Dagster project demonstrating data quality patterns: asset checks, Great Expectations, dbt tests, and freshness checks"
requires-python = ">=3.10,<3.14"
dependencies = [
    "dagster>=1.9.0",
    "dagster-dbt>=0.25.0",
    "dagster-duckdb>=0.25.0",
    "dbt-duckdb>=1.7.0",
    "pandas>=2.0.0",
    "great-expectations>=0.18.0",
]

[dependency-groups]
dev = [
    "dagster-webserver",
    "dagster-dg-cli",
    "pytest>=7.0.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
packages = ["src/data_quality_patterns"]

[tool.dagster]
module_name = "data_quality_patterns.definitions"
code_location_name = "data_quality_patterns"

[tool.dg]
directory_type = "project"

[tool.dg.project]
root_module = "data_quality_patterns"
defs_module = "data_quality_patterns.defs"
code_location_target_module = "data_quality_patterns.definitions"
