[build-system]
requires = ["hatchling>=1.19.0"]
build-backend = "hatchling.build"

[project]
name = "deploy-docker"
version = "1!0+dev"
requires-python = ">=3.10,<3.14"
dependencies = [
    "dagster",
    "dagster-webserver",
    "dagster-docker",
]

[tool.hatch.build.targets.wheel]
bypass-selection = true

[dependency-groups]
test = [
    "dagster[test]",
    "dagster-pipes",
    "dagster-shared",
    "pytest",
]

[tool.uv.sources]
dagster = { path = "../../python_modules/dagster", editable = true }
dagster-webserver = { path = "../../python_modules/dagster-webserver", editable = true }
dagster-docker = { path = "../../python_modules/libraries/dagster-docker", editable = true }
dagster-pipes = { path = "../../python_modules/dagster-pipes", editable = true }
dagster-shared = { path = "../../python_modules/libraries/dagster-shared", editable = true }
