[build-system]
requires = ["hatchling>=1.19.0"]
build-backend = "hatchling.build"

[project]
name = "deploy-ecs"
version = "1!0+dev"
dependencies = [
    "dagster",
    "dagster-aws",
    "dagster-postgres",
    "dagster-webserver",
    "dagster-graphql",
]

[tool.hatch.build.targets.wheel]
bypass-selection = true

[dependency-groups]
test = [
    "dagster[test]",
    "dagster-pipes",
    "dagster-shared",
    "dagster-test",
    "pytest",
]

[tool.uv.sources]
dagster = { path = "../../python_modules/dagster", editable = true }
dagster-aws = { path = "../../python_modules/libraries/dagster-aws", editable = true }
dagster-postgres = { path = "../../python_modules/libraries/dagster-postgres", editable = true }
dagster-webserver = { path = "../../python_modules/dagster-webserver", editable = true }
dagster-graphql = { path = "../../python_modules/dagster-graphql", editable = true }
dagster-pipes = { path = "../../python_modules/dagster-pipes", editable = true }
dagster-shared = { path = "../../python_modules/libraries/dagster-shared", editable = true }
dagster-test = { path = "../../python_modules/dagster-test", editable = true }
