[build-system]
requires = ["hatchling>=1.19.0"]
build-backend = "hatchling.build"

[project]
name = "development_to_production"
version = "1!0+dev"
description = "Dagster example of local development and production deployment."
authors = [{name = "Dagster Labs", email = "hello@dagsterlabs.com"}]
license = "Apache-2.0"
classifiers = [
    "Programming Language :: Python :: 3.2",
    "Operating System :: OS Independent",
]
dependencies = [
    "dagster",
    "dagster-snowflake",
    "dagster-snowflake-pandas",
    "pandas",
    "requests",
]

[project.optional-dependencies]
dev = ["dagster-webserver", "pytest"]

[project.urls]
Homepage = "https://github.com/dagster-io/dagster/tree/master/examples/development_to_production"

[tool.dagster]
module_name = "development_to_production.definitions"
code_location_name = "development_to_production"
