[build-system]
requires = ["hatchling>=1.19.0"]
build-backend = "hatchling.build"

[project]
name = "docs_snippets"
version = "1!0+dev"
authors = [{name = "Dagster Labs", email = "hello@dagsterlabs.com"}]
license = "Apache-2.0"
classifiers = [
    "Programming Language :: Python :: 3.10",
    "Operating System :: OS Independent",
]
dependencies = []

[project.optional-dependencies]
full = [
    # matplotlib-inline 0.1.5 is causing mysterious
    # "'NoneType' object has no attribute 'canvas'" errors in the tests that involve
    # Jupyter notebooks
    "matplotlib-inline<=0.1.3",
    "click",
    "dagster-webserver[test]",
    "dbt-duckdb",
    "duckdb",
    "flaky",
    "matplotlib",
    "moto[s3]<5.0",
    "numpy",
    "pandas",
    "pandera",
    "pexpect",
    "plotly",
    "pyspark",
    "pytest",
    "requests",
    "scikit-learn",
    "seaborn",
    "slack_sdk",
    "syrupy",
    "xgboost",
    "apache-airflow<3.0.0",
    "pytest-httpserver",
]

[project.urls]
Homepage = "https://github.com/dagster-io/dagster/tree/master/examples/docs_snippets"

[tool.ruff]

# Extend example root configuration.
extend = "../pyproject.toml"

# Shorter line length for docs snippets for better browser formatting.
line-length = 88

# Ignore a specific file
extend-exclude = [
  "docs_snippets/guides/dg/creating-dg-plugin/2-empty-component.py",
  "docs_snippets/guides/components/creating-an-inline-component/generated/2-asset-with-schedule-init.py",
  "docs_snippets/guides/dg/migrating-project/13-initial-definitions.py",
  "docs_snippets/guides/components/shell-script-component/generated/2-shell-command-empty.py",
  "docs_snippets/guides/components/migrating-definitions/2-definitions-before.py",
  "docs_snippets/guides/dg/migrating-definitions/7-definitions-after-all.py",
  "docs_snippets/guides/components/integrations/dlt-component/5-loads.py",
  "docs_snippets/guides/components/integrations/dlt-component/7-customized-loads.py",
  "docs_snippets/guides/components/python-components/python-component.py",
]

[tool.ruff.lint]

# Use extend-ignore so that we ignore all the same codes ignored in root.
extend-ignore = [

  # (Unused import): When the same symbol is imported in multiple blocks, the
  # last import takes precedence for python. This causes Ruff to think an
  # import in an earlier block is unused and report F401.
  "F401",

  # (Redefinition): This happens frequently in docs_snippets when we import the same symbol in multiple
  # snippets within the same file.
  "F811",

  # (local variable assigned but never used): This happens a lot in docs snippets for didactic
  # purposes.
  "F841",

  # (flake8-type-checking) No need to complicate docs snippets with `if TYPE_CHECKING` blocks.
  "TCH",
]

[tool.ruff.lint.isort]

# Ensures ruff classifies imports from `dagster` as first-party. Keeps snippet imports relatively
# compressed.
known-first-party = ["dagster"]
