[build-system]
requires = ["hatchling>=1.19.0"]
build-backend = "hatchling.build"

[project]
name = "feature_graph_backed_assets"
version = "1!0+dev"
requires-python = ">=3.10,<3.15"
description = "Dagster example of op and graph-backed assets."
license = "Apache-2.0"
dependencies = [
    "dagster",
    "pandas",
]

[project.optional-dependencies]
dev = ["dagster-webserver", "pytest"]

[project.urls]
Homepage = "https://github.com/dagster-io/dagster/tree/master/examples/feature_graph_backed_assets"

[tool.dagster]
module_name = "feature_graph_backed_assets.definitions"
code_location_name = "feature_graph_backed_assets"

[dependency-groups]
test = [
    "dagster[test]",
    "dagster-pipes",
    "dagster-shared",
    "dagster-webserver",
    "dagster-graphql",
]

[tool.uv.sources]
dagster = { path = "../../python_modules/dagster", editable = true }
dagster-pipes = { path = "../../python_modules/dagster-pipes", editable = true }
dagster-shared = { path = "../../python_modules/libraries/dagster-shared", editable = true }
dagster-webserver = { path = "../../python_modules/dagster-webserver", editable = true }
dagster-graphql = { path = "../../python_modules/dagster-graphql", editable = true }
