[project]
name = "google_drive_factory"
version = "0.1.0"
description = "Dagster project to show factory patterns"
readme = "README.md"
requires-python = ">=3.9,<3.14"
dependencies = [
    "dagster",
    "dagster-cloud",
    "dagster-duckdb",
    "polars",
    "pyarrow",
    "google-api-core",
    "google-api-python-client",
    "google-auth",
    "duckdb",
]

[project.optional-dependencies]
dev = [
    "dagster-webserver",
    "pytest",
    "ruff",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.dagster]
module_name = "google_drive_factory.definitions"
project_name = "google_drive_factory"

[tool.setuptools.packages.find]
