[project]
name = "ingestion-patterns"
version = "0.1.0"
description = "Dagster project demonstrating data ingestion patterns: Push, Pull, and Poll"
requires-python = ">=3.10,<3.14"
dependencies = [
    "dagster>=1.9.0",
    "dagster-duckdb>=0.25.0",
    "pandas>=2.0.0",
    "requests>=2.28.0",
]

[project.optional-dependencies]
kafka = [
    "confluent-kafka>=2.0.0",
]
webhook = [
    "flask>=3.0.0",
]

[dependency-groups]
dev = [
    "dagster-webserver",
    "dagster-dg-cli",
    "pytest",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
packages = ["src/ingestion_patterns"]

[tool.dagster]
module_name = "ingestion_patterns.definitions"
code_location_name = "ingestion_patterns"

[tool.dg]
directory_type = "project"

[tool.dg.project]
root_module = "ingestion_patterns"
defs_module = "ingestion_patterns.defs"
code_location_target_module = "ingestion_patterns.definitions"
