[project]
name = "multi-platform-data"
requires-python = ">=3.10,<3.14"
version = "0.1.0"
description = "Dagster workspace demonstrating multi-platform data pipelines with separate code locations"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
lint.extend-select = ["I"]
