[build-system]
requires = ["hatchling>=1.19.0"]
build-backend = "hatchling.build"

[project]
name = "metadata_to_plus"
version = "1!0+dev"
dependencies = [
    "dagster",
    "dagster-cloud",
]

[project.optional-dependencies]
dev = ["dagster-webserver", "pytest"]

[tool.dagster]
module_name = "metadata_to_plus"
